--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -24,3 +24,6 @@ console_error_panic_hook = { version = "0.1.1", optional = true }
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-Oz", "--enable-mutable-globals"]
