--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -21,9 +21,14 @@ js-sys = "0.3.44"
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.1", optional = true }
 
+[profile.dev]
+overflow-checks = false
+
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+
+overflow-checks = false
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ["-Oz", "--enable-mutable-globals"]
