--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -21,6 +21,16 @@ js-sys = "0.3.44"
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.1", optional = true }
 
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+    'CanvasRenderingContext2d',
+    'Document',
+    'Element',
+    'HtmlCanvasElement',
+    'Window',
+]
+
 [profile.dev]
 overflow-checks = false
 
