--- a/html_gui/package.json
+++ b/html_gui/package.json
@@ -15,7 +15,8 @@
     "open-color": "^1.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@fortawesome/vue-fontawesome": "^0.1.10"
+    "@fortawesome/vue-fontawesome": "^0.1.10",
+    "ajv": "^6.12.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
