--- a/html_gui/package.json
+++ b/html_gui/package.json
@@ -7,16 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "uikit": "^3.5.4",
-    "open-color": "^1.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/vue-fontawesome": "^0.1.10",
-    "ajv": "^6.12.5"
+    "ajv": "^6.12.5",
+    "core-js": "^3.6.5",
+    "open-color": "^1.7.0",
+    "uikit": "^3.5.4",
+    "vue": "^2.6.11",
+    "vue-i18n": "^8.22.1",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
