--- a/assembler/Cargo.toml
+++ b/assembler/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "assembler"
 version = "0.1.4"
-authors = ["dhr <dhr.git.pub@gmail.com>"]
 edition = "2018"
+
+authors = ["dhr <dhr.git.pub@gmail.com>"]
+repository = "https://github.com/dhreck/cr6502emu"
 license = "GNU AGPLv3"
+homepage = "https://github.com/dhreck/cr6502emu"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
