--- a/html_gui/package.json
+++ b/html_gui/package.json
@@ -1,32 +1,38 @@
 {
-  "name": "html-gui",
-  "version": "0.3.0",
-  "author": "dhr <dhr.git.pub@gmail.com>",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@fortawesome/vue-fontawesome": "^0.1.10",
-    "ajv": "^6.12.5",
-    "core-js": "^3.6.5",
-    "open-color": "^1.7.0",
-    "uikit": "^3.5.4",
-    "vue": "^2.6.11",
-    "vue-i18n": "^8.22.1",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-router": "~4.4.0",
-    "@vue/cli-plugin-vuex": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
-    "vue-template-compiler": "^2.6.11"
-  }
+    "name": "html-gui",
+    "version": "0.3.0",
+    "author": "dhr <dhr.git.pub@gmail.com>",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/dhreck/cr6502emu.git"
+    },
+    "license": "AGPL-3.0-only",
+    "homepage": "https://github.com/dhreck/cr6502emu",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.29",
+        "@fortawesome/free-solid-svg-icons": "^5.13.1",
+        "@fortawesome/vue-fontawesome": "^0.1.10",
+        "ajv": "^6.12.5",
+        "core-js": "^3.6.5",
+        "open-color": "^1.7.0",
+        "uikit": "^3.5.4",
+        "vue": "^2.6.11",
+        "vue-i18n": "^8.22.1",
+        "vue-router": "^3.2.0",
+        "vuex": "^3.4.0"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~4.4.0",
+        "@vue/cli-plugin-router": "~4.4.0",
+        "@vue/cli-plugin-vuex": "~4.4.0",
+        "@vue/cli-service": "~4.4.0",
+        "less": "^3.0.4",
+        "less-loader": "^5.0.0",
+        "vue-template-compiler": "^2.6.11"
+    }
 }
