--- a/assembler/Cargo.toml
+++ b/assembler/Cargo.toml
@@ -2,6 +2,7 @@
 name = "assembler"
 version = "0.1.4"
 edition = "2018"
+publish = false
 
 authors = ["dhr <dhr.git.pub@gmail.com>"]
 repository = "https://github.com/dhreck/cr6502emu"
@@ -17,7 +18,7 @@ default = ["console_error_panic_hook"]
 [dependencies]
 wasm-bindgen = "0.2"
 
-phf = { version = "0.8", features =["macros"] }
+phf = { version = "0.8", features = ["macros"] }
 
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
