--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -2,6 +2,7 @@
 name = "system"
 version = "0.3.1"
 edition = "2018"
+publish = false
 
 authors = ["dhr <dhr.git.pub@gmail.com>"]
 repository = "https://github.com/dhreck/cr6502emu"
